# finalproject_pogozhev_dpo_nod

./: .gitignore  Makefile  README.md  config.json  final_demo.py  main.py  pyproject.toml  test_app.py  test_session.py
data/: rates.json
valutatrade_hub/: __init__.py  decorators.py  logging_config.py
valutatrade_hub/cli/: __init__.py  interface.py
valutatrade_hub/core/: __init__.py  currencies.py  exceptions.py  models.py  usecases.py  utils.py
valutatrade_hub/infra/: __init__.py  database.py  settings.py
valutatrade_hub/parser_service/: __init__.py  api_clients.py  config.py  scheduler.py  storage.py  updater.py
